Refactor TreeViewPanel to use removeLast() for stack operations